--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -3,9 +3,10 @@
     background: #f5f5f5;
     border-radius: 12px;
     display: inline-block;
-    width: 58px;
+    width: fit-content;
     height: 26px;
-    padding: 4px 10px;
+    padding: 5px 16px;
+    margin-left: 12px;
 
     p {
       font-family: "Poppins";
