- update ui home page

--- a/src/styles/components/_model.scss
+++ b/src/styles/components/_model.scss
@@ -20,6 +20,14 @@ a {
 .hidden {
   display: none;
 }
+.heading {
+  font-family: "Poppins" !important;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 30px;
+  color: #151515;
+}
 
 .img {
   object-fit: cover;
@@ -130,5 +138,129 @@ article {
   &.--h2 {
     font-size: var(--h2-fs);
     line-height: var(--h2-lh);
+  }
+}
+
+//Product
+.product__item-wrap {
+  margin-left: -35px;
+  display: flex;
+
+  .product-item {
+    width: calc(100% / 3);
+    margin-left: 35px;
+  }
+  .products-card {
+    width: 269px;
+    height: 323px;
+    border-radius: 12px;
+    border: 1px solid #d1d1d1;
+    background: #ffffff;
+    padding: 16px;
+    .product-image {
+      position: relative;
+      .sale-item {
+        width: 54px;
+        height: 18px;
+        background: #f4f8ec;
+        border-radius: 12px;
+        position: absolute;
+        top: 12px;
+        left: 12px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 10;
+        p {
+          font-family: Poppins;
+          font-style: normal;
+          font-weight: 600;
+          font-size: 12px;
+          line-height: 20px;
+
+          color: #6a983c;
+        }
+      }
+    }
+  }
+  .product-content {
+    margin-top: 16px;
+  }
+  .product-title {
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 25px;
+    color: #151515;
+  }
+  .desc {
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 16px;
+    color: #575757;
+  }
+  .product-button {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 21px;
+    position: relative;
+    .price-sale {
+      font-family: "Poppins";
+      font-style: normal;
+      font-weight: 600;
+      font-size: 12px;
+      line-height: 20px;
+      text-decoration-line: line-through;
+      color: #a9a9a9;
+      position: absolute;
+      bottom: -9px;
+      left: 0;
+    }
+    .price {
+      font-family: Poppins;
+      font-style: normal;
+      font-weight: 600;
+      font-size: 18px;
+      line-height: 30px;
+      color: #151515;
+    }
+    .btn-buy {
+      width: 90px;
+      height: 36px;
+      background: #6a983c;
+      border: 2px solid #46760a;
+      border-radius: 12px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      p {
+        font-family: Poppins;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 15px;
+        line-height: 22px;
+        color: #ffffff;
+      }
+    }
+  }
+}
+
+.btn-flex {
+  a {
+    display: block;
+  }
+  display: flex;
+  align-items: center;
+  p {
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 15px;
+    line-height: 22px;
+    color: #151515;
+    margin-right: 6px;
   }
 }
