--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,3 +1,5 @@
+@import "swiper/swiper.min.css";
+@import "swiper/components/pagination/pagination.min.css";
 @import url("https://fonts.googleapis.com/css?family=Lobster");
 
 //Core
@@ -23,7 +25,7 @@
 @import "./components/model";
 
 //pages
-@import "./pages/home";
+@import "./pages/home/home";
 
 
 
