--- a/src/styles/components/_model.scss
+++ b/src/styles/components/_model.scss
@@ -144,7 +144,9 @@ article {
 //Product
 .product__item-wrap {
   margin-left: -35px;
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-row-gap: 48px;
 
   .product-item {
     width: calc(100% / 3);
@@ -152,7 +154,7 @@ article {
   }
   .products-card {
     width: 269px;
-    height: 323px;
+    height: 350px;
     border-radius: 12px;
     border: 1px solid #d1d1d1;
     background: #ffffff;
@@ -193,6 +195,15 @@ article {
     font-size: 15px;
     line-height: 25px;
     color: #151515;
+  }
+  .rate {
+    display: flex;
+    margin-left: -8px;
+    margin-top: 13px;
+    img {
+      display: block;
+      margin-left: 8px;
+    }
   }
   .desc {
     font-family: Open Sans;
