--- a/src/styles/layout/_layout.scss
+++ b/src/styles/layout/_layout.scss
@@ -24,7 +24,7 @@ body {
     $gray-cl,
     none
   );
-  background: $white-cl;
+  background: #ece5df25;
   position: relative;
   scroll-behavior: smooth;
   .container-fluid {
