--- a/src/pages/ProductDetails/DetailsBottom/style.scss
+++ b/src/pages/ProductDetails/DetailsBottom/style.scss
@@ -16,5 +16,8 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-row-gap: 48px;
+    @media screen and (min-width: 1280px) {
+      margin-left: unset;
+    }
   }
 }
