--- a/src/pages/ProductDetails/DetailsMiddle/style.scss
+++ b/src/pages/ProductDetails/DetailsMiddle/style.scss
@@ -4,3 +4,8 @@
   grid-template-columns: repeat(2, 1fr);
   //   grid-column-gap: 32px;
 }
+.detail-middle-item.--right {
+  @media screen and (max-width: 1199px) {
+    margin-left: 30px;
+  }
+}
