change display flex

--- a/src/styles/pages/productList/_categoryMain.scss
+++ b/src/styles/pages/productList/_categoryMain.scss
@@ -47,7 +47,7 @@
     width: 38px;
     height: 18px;
     position: absolute;
-  
+ 	justify-content: center;
     right: 50px;
     background: #eb5757;
     border-radius: 12px;
